stravandbota/index.css
/* Notes */

/* font-family: 'Open Sans', sans-serif;
 * font-family: 'Oxygen Mono', monospace;
 * Open Sans in 400 and 600
*/

/****************************************************************************************************************************************************************************************************************************/

/* General */

* {font-family: 'Open Sans', sans-serif !important}

body {
	background-color: #111;
	color: #FFF !important;
}

a, a:visited {
	color: #FFF;
	text-decoration: none;
	-webkit-transition: color .2s;
	-moz-transition: color .2s;
	-ms-transition: color .2s;
	-o-transition: color .2s;
	transition: color .2s;
}

a:hover {
	color: #999;
	text-decoration: none;
	-webkit-transition: color .2s;
	-moz-transition: color .2s;
	-ms-transition: color .2s;
	-o-transition: color .2s;
	transition: color .2s;
}

.preload * {
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-ms-transition: none !important;
	-o-transition: none !important;
	transition: none !important;
}

/****************************************************************************************************************************************************************************************************************************/

/* Logo */

.logo {
	position: absolute;
	left: 0;
	right: 0;
	margin: 32px auto 0;
	width: 96px;
	height: 96px;
	z-index: 2;
}

.logo a img {
	width: 96px;
	height: 96px;
	border-radius: 50%;
	-webkit-transition: border-radius .3s;
	-moz-transition: border-radius .3s;
	-ms-transition: border-radius .3s;
	-o-transition: border-radius .3s;
	transition: border-radius .3s;
}

.logo a img:hover {
	border-radius: 8%;
	-webkit-transition: border-radius .3s;
	-moz-transition: border-radius .3s;
	-ms-transition: border-radius .3s;
	-o-transition: border-radius .3s;
	transition: border-radius .3s;
}

/****************************************************************************************************************************************************************************************************************************/

/* Sections */

.title {
	font-size: 78px;
	font-weight: 600;
	margin: 34px 0 42px;
	text-align: center;
}

.stravinci, .botamilho {
	width: 50%;
	margin-bottom: 78px;
}

.stravinci .title {color: #4286F4}
.botamilho .title {color: #EF5A2D}
.stravinci {float: left}
.botamilho {float: right}

/****************************************************************************************************************************************************************************************************************************/

/* Buttons */

button, .section {
	width: 80%;
	display: block;
	margin: 0 auto 36px;
	position: relative;
}

button, button:focus {
	border: 3px solid #292929;
	margin: 0 auto 36px;
	outline: none;
	padding: 10px !important;
	font-size: 28px;
	background-color: #111;
	color: #FFF;
	border-radius: 12px;
	-webkit-transition: background-color .2s;
	-moz-transition: background-color .2s;
	-ms-transition: background-color .2s;
	-o-transition: background-color .2s;
	transition: background-color .2s;
	z-index: 1;
}

button:hover {
	cursor: pointer;
	background-color: #292929;
	-webkit-transition: background-color .2s;
	-moz-transition: background-color .2s;
	-ms-transition: background-color .2s;
	-o-transition: background-color .2s;
	transition: background-color .2s;
}

#defvS, #defvB {margin-bottom: 0}

/****************************************************************************************************************************************************************************************************************************/

/* Sections and other divs */

.section {
	display: none;
	background-color: #292929;
	margin-top: -36px;
	z-index: 0;
	border-radius: 0 0 12px 12px;
}

.sep {
	width: 90%;
	height: 2px;
	background-color: #191919;
	margin: 0 auto -12px;
	border-radius: 1px;
}

.content {
	text-align: center;
	margin: 12px 5% 0;
	padding: 22px 0;
}

.content * {
	margin: 0;
	padding: 0;
	font-size: 17px;
}

/****************************************************************************************************************************************************************************************************************************/

/* Crosshair */

.xhair {
	float:right;
	margin: 24px 24px 0 0;
	overflow: hidden;
	width: 96px;
	height: 96px;
	border-radius: 8px;
}

.xhair img {
	height: 96px;
	transform: translateX(-96px);
	-webkit-transition: transform .25s;
	-moz-transition: transform .25s;
	-ms-transition: transform .25s;
	-o-transition: transform .25s;
	transition: transform .25s;
}

.xhair:hover img {
	transform: translateX(0);
	-webkit-transition: transform .25s;
	-moz-transition: transform .25s;
	-ms-transition: transform .25s;
	-o-transition: transform .25s;
	transition: transform .25s;
}

.cross {
	font-family: 'Oxygen Mono', monospace !important;
	font-size: 15px;
	letter-spacing: -1px;
}

.note {
	font-size: 14px;
	margin-top: 32px;
	color: #BBB;
}

/****************************************************************************************************************************************************************************************************************************/

/* Text formatting */

.fst {font-weight: 600}
.snd {color: #BBB}
.just {text-align: justify}
.autoexec {font-size: 21px}
.laptop {
	line-height: 1.5;
	border-bottom: 2px solid #FFF;
}

/****************************************************************************************************************************************************************************************************************************/

/* Bottom bar */

.pill {
	position: fixed;
	bottom: 0;
	width: 100%;
	background-color: #111;
	text-align: center;
	z-index: 4;
}

.pill a {
	font-size: 32px;
	margin: 8px auto;
	display: block;
}

.pill div {
	display: block;
	width: 96%;
	height: 4px;
	border-radius: 2px;
	background-color: #666;
	margin: 0 auto;
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 1078px) {
	button, .section {width: 90%}
	.title {margin-left: 18px}
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 958px) {
	.stravinci, .botamilho {width: 100%}
	.title {margin: 34px 0 42px}

	.botamilho {
		margin-top: -64px;
		margin-bottom: 48px;
	}

	.logo {
		display: block;
		width: 100%;
		height: 156px;
		margin-top: 0;
		position: relative;
		overflow: hidden;
	}

	.logo a img {
		content: url('../things/imgs/banner.png');
		display: block;
		position: absolute;
		height: 159px;
		width: 958px;
		margin: auto;
		top: -99999px;
		bottom: -99999px;
		left: -99999px;
		right: -99999px;
		border-radius: 0;
		-webkit-transition: none !important;
		-moz-transition: none !important;
		-ms-transition: none !important;
		-o-transition: none !important;
		transition: none !important;
	}

	.logo a img:hover {
		border-radius: 0;
		-webkit-transition: none !important;
		-moz-transition: none !important;
		-ms-transition: none !important;
		-o-transition: none !important;
		transition: none !important;
	}

	.pill {position: inherit}
	.pill div {display: flex}
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 479px) {
	button, button:focus {font-size: 22px}
	.content * {font-size: 14px}
	#rankS p, #rankB p {font-size: 17px !important}
	.autoexec {font-size: 19px !important}
	.cross {font-size: 13px}
	.botamilho {margin-bottom: 24px}

	.title {
		font-size: 56px;
		margin: 8px 0 42px;
	}

	.logo a img {
		height: 133px;
		width: 800px;
		margin: auto;
		top: -10025px; /* wtf -_- */
		bottom: -9999px;
		left: -9999px;
		right: -9999px;
		border-radius: 0;
		-webkit-transition: none !important;
		-moz-transition: none !important;
		-ms-transition: none !important;
		-o-transition: none !important;
		transition: none !important;
	}

	.pill div {
		height: 2px;
		border-radius: 1px;
	}

	.pill a {font-size: 24px}
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 394px) {
	#compS span, #compB span {font-size: 13px !important}
	.cross {font-size: 12px}
	.xhair {margin: 6px 6px 0 0}
	.content {margin: 12px 4% 0}
	.note {font-size: 12px}
}

/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/
/****************************************************************************************************************************************************************************************************************************/

@media only screen and (max-width: 358px) {
	#compS span, #compB span {font-size: 11.5px !important}
	.cross {font-size: 11px}
	.xhair {margin: -6px 6px 0 0}
	.note {font-size: 11px}
}

